scoreboard css fix on narrow screens

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -71,6 +71,8 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  gap: 5px;
+  flex-wrap: wrap;
 }
 
 .question-mark-container {
@@ -162,6 +164,7 @@
   .score-board-flex {
     flex-direction: column;
     line-height: 0px;
+	 gap: 0px;
   }
 
   .card-title {
